# sailfishos-chum-gui

./: .gitignore  CMakeLists.txt  QtCreatorDeployment.txt.in  README.md  sailfishos-chum-gui.desktop
.github/ISSUE_TEMPLATE/: bug-template.md  help-template.md  suggestion-template.md
.github/ISSUE_TEMPLATE/workflows/: ci-on-pull_req.yml
.github/workflows/: ci-on-pull_req.yml  ci-on-tags.yml  ci-on-tags.yml_build-kaput
.transifex/: config.yml
icons/: CMakeLists.txt  README.md
mapplauncherd/privileges.d/: sailfishos-chum-gui
qml/: qmldir  sailfishos-chum-gui.qml
qml/components/: AppInformation.qml  AppSummary.qml  ChumDetailItem.qml  FancyPageHeader.qml  ImageLabel.qml  LabelMarkdown.qml  MainPageButton.qml  MarkdownParser.qml  PackagesListItem.qml  PackagesPage.qml  ScreenshotsBox.qml  TextFieldDesc.qml
qml/cover/: CoverPage.qml
qml/pages/: AboutPage.qml  AboutPage.qml.autosave  AvailablePackagesPage.qml  CategoriesPage.qml  IssuePage.qml  IssuesListPage.qml  MainPage.qml  MessagePage.qml  PackagePage.qml  PackagesListPage.qml  ReleasePage.qml  ReleasesListPage.qml  ScreenshotPage.qml  SettingsPage.qml  UpdatesPage.qml
rpm/: sailfishos-chum-gui-rpmlintrc  sailfishos-chum-gui.changes  sailfishos-chum-gui.rpmlintrc  sailfishos-chum-gui.spec
src/: CMakeLists.txt  chum.cpp  chum.h  chumavailablepackagesmodel.cpp  chumavailablepackagesmodel.h  chumpackage.cpp  chumpackage.h  chumpackagemodel.cpp  chumpackagemodel.h  chumpackagesmodel.cpp  chumpackagesmodel.h  chumupdatesmodel.cpp  chumupdatesmodel.h  loadableobject.cpp  loadableobject.h  main.cpp  main.h  projectabstract.cpp  projectabstract.h  projectforgejo.cpp  projectforgejo.h  projectgithub.cpp  projectgithub.h  projectgitlab.cpp  projectgitlab.h  ssu.cpp  ssu.h
translations/: CMakeLists.txt  README.md  sailfishos-chum-gui-de.ts  sailfishos-chum-gui-es.ts  sailfishos-chum-gui-et.ts  sailfishos-chum-gui-fi.ts  sailfishos-chum-gui-fr.ts  sailfishos-chum-gui-hu.ts  sailfishos-chum-gui-it.ts  sailfishos-chum-gui-nb.ts  sailfishos-chum-gui-no.ts  sailfishos-chum-gui-pl.ts  sailfishos-chum-gui-ru.ts  sailfishos-chum-gui-sk.ts  sailfishos-chum-gui-sv.ts  sailfishos-chum-gui.ts
